syntax = "proto3";

package chef.automate.domain.license_control;
option go_package = "github.com/chef/automate/api/config/license_control";

import "google/protobuf/wrappers.proto";
import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";

message ConfigRequest {
	option (chef.automate.api.service_config) = {name: "license-control-service"};

	reserved 1 to 2;
	V1 v1 = 3;

	message V1 {
		System sys = 1;
		Service svc = 2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			chef.automate.infra.config.TLSCredentials tls = 2;
			Service service = 3;
			Telemetry telemetry = 4;
			Log log = 5;

			message Service {
				google.protobuf.StringValue host = 1 [deprecated=true]; // The listen host is no longer setable(localhost only)
				google.protobuf.Int32Value port = 3 [ (chef.automate.api.port) = { name: "service", default: 10124, protocol: "grpc" } ];
			}

			message Telemetry {
				google.protobuf.BoolValue opt_out = 1;
				google.protobuf.StringValue url = 2;
			}

			message Log {
				google.protobuf.StringValue format = 1;
				google.protobuf.StringValue level = 2;
			}
		}

		message Service {
			google.protobuf.StringValue license_path = 1;
			google.protobuf.StringValue license = 2;
		}
	}
}
